[package]
name = "pit-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.19"
crossterm = "0.25"
tungstenite = "0.20.1"
url = "2.4.1"
env_logger = "0.10.0"
unicode-width = "0.1.11"
