[package]
name = "pit-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.4.1"
websockets = "0.3.0"
futures = "0.3.21"
crossterm = "0.27.0"
ratatui = "0.23.0"
unicode-width = "0.1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
