[package]
name = "pit-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.23.0"
unicode-width = "0.1.11"
websockets = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4.1"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
async-std = "1.10"
